--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .calcBody {
@@ -29,12 +30,12 @@ body {
 
 .calcMid {
     flex: 1;
-    background-color: skyblue;
+    background-color: tan;
     margin-left: 16px;
     margin-right: 16px;
     display: flex;
     border-radius: 5px;
-    border: solid black;
+    border: solid white;
 }
 
 .numerosEnt {
@@ -43,15 +44,29 @@ body {
     
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    
 }
 
 
 
-.numerosEnt > buttons {
-    flex: 1 1 100%;
+.numerosEnt > button {
+    flex-basis: 30%;
+    flex-shrink: 1;
+    margin-top: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
 }
-
 .operators {
     flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.operators > button {
+    flex-basis: 100%;
+    margin-right: 2px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+
 }
