--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
     flex-direction: column;
 }
 
+h4 {
+    text-align: center;
+    max-width: 45vw;
+}
+
 .calcBody {
     display: flex;
     flex-direction: column;
@@ -16,7 +21,7 @@ body {
 }
 
 .calcDisplay {
-    height: 30px;
+    height: 15px;
     background-color: skyblue;
     margin-bottom: 8px;
     margin-right: 16px;
@@ -25,7 +30,7 @@ body {
     border: solid black;
     text-align: right;
     padding-right: 8px;
-    padding-top: 8px;
+    padding-bottom: 2px;
 }
 
 .calcMid {
