--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h4 {
     background-color: gray;
     padding: 8px;
     width: 35vw;
-    height: 25vh;
+    height: 35vh;
 }
 
 .calcDisplay {
@@ -49,9 +49,8 @@ h4 {
     
     display: flex;
     flex-wrap: wrap;
-    
+    flex-direction: row;
 }
-
 
 
 .numerosEnt > button {
@@ -74,4 +73,21 @@ h4 {
     margin-top: 2px;
     margin-bottom: 2px;
 
+}
+
+.line-break {
+    width: 100%;
+}
+.filler {
+    flex-basis: 30%;
+    flex-shrink: 1;
+    margin-top: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
+}
+
+.Ent {
+    display: flex;
+    width: 100%;
 }
